package br.dio.diagramadeclasses;

import br.dio.diagramadeclasses.ipod.Ipod;


public class Iphone {

    public static void main(String[] args) {

       Ipod.acessoIpod();

    }
}
